# Code-Templates

CMake/project/: CMakeLists.txt  config.h.in  main.cpp
CMake/project/archive/: CMakeLists.txt  func.cpp  func.hpp
CMake/project/lib/: gtest_main.lib
